--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^16.13.1",
     "react-facebook-login": "^4.1.1",
     "react-google-login": "^5.1.21",
+    "react-instagram-embed": "^1.5.0",
     "react-js-pagination": "^3.0.3",
     "react-markdown": "^4.3.1",
     "react-moment": "^0.9.7",
