--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "bootstrap": "^4.5.2",
     "bootstrap-alerts": "^1.2.2",
     "date-fns": "^2.16.1",
+    "daypilot-pro-react": "https://npm.daypilot.org/daypilot-pro-react/trial/2018.2.3297.tar.gz",
     "link-react": "^3.0.0",
     "markdown": "^0.5.0",
     "mdbreact": "^4.27.0",
     "moment": "^2.28.0",
     "react": "^16.13.1",
+    "react-big-calendar": "^0.28.0",
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
     "react-facebook-login": "^4.1.1",
