--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "react": "^16.13.1",
     "react-big-calendar": "^0.28.0",
     "react-bootstrap": "^1.3.0",
+    "react-bootstrap-time-picker": "^2.0.1",
+    "react-datepicker": "^3.1.3",
     "react-dom": "^16.13.1",
     "react-facebook-login": "^4.1.1",
     "react-google-login": "^5.1.21",
