--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-markdown": "^4.3.1",
     "react-moment": "^0.9.7",
     "react-places-autocomplete": "^7.3.0",
+    "react-rating-stars-component": "^2.2.0",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
